# topic-1-advanced

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  test.py  test_inference.py
.github/workflows/: deploy.yaml  pre-commit.yaml  update_locks.yaml
bash_tools/: 0.init_env.sh  1.run_inference_service.sh  2.inference_request.sh  3.run_gateway_service.sh  4.docker_compose.sh  5.gateway_request.sh  6.metrics_request.sh
chat_service/: pyproject.toml
chat_service/src/: main.py
gateway_service/: pyproject.toml
gateway_service/app/: main.py
gateway_service/app/api/: auth.py  chat.py  metrics.py  rag.py  rag_gradio.py
gateway_service/app/core/: config.py  metrics.py  security.py
gateway_service/app/db/: database.py  models.py
gateway_service/app/middleware/: auth_middleware.py  logging_middleware.py  rate_limit_middleware.py
gateway_service/app/schemas/: chat.py  rag.py
inference_service/: Dockerfile  pyproject.toml
inference_service/src/: main.py
k8s/: gateway-service-deployment.yaml  gpt-4-mini-deployment.yaml  gpt-4o-deployment.yaml  postgres-deployment.yaml  redis-deployment.yaml
middleware_service/: Dockerfile  pyproject.toml
middleware_service/app/api/: auth.py  chat.py
middleware_service/app/core/: config.py  security.py
middleware_service/app/db/: database.py  models.py
middleware_service/app/middleware/: auth_middleware.py  logging_middleware.py  rate_limit_middleware.py
middleware_service/app/schemas/: chat.py  signup.py
middleware_service/src/: main.py
rag_gradio_service/: Dockerfile  compose.cpu.yaml  pyproject.toml
rag_gradio_service/src/: config.py  main.py  requirements.txt
rag_service/: Dockerfile  compose.cpu.yaml  docker-compose.yaml  pyproject.toml
rag_service/src/: config.py  main.py  semantic_search.py  test.py
rag_service/src/.lancedb/docs.lance/_transactions/: 0-0358f97d-d2d8-42b1-b219-f17aaa6b61e2.txn  1-a67deec1-7fa5-4ef1-a6e5-d06a44d9f1ba.txn  2-5d1b5df9-4345-4dde-8a58-9b638f73794a.txn  3-3c8c3b2d-da21-4186-9ed5-347ecbcc816e.txn  4-5fc25f65-f33e-45c0-9344-6d685ebdfe7f.txn  5-82ead4bf-908f-4b80-ba5f-9a8f8889ea98.txn  6-e3c5e8a5-185c-47e1-a6a4-b828a2247035.txn
rag_service/src/.lancedb/docs.lance/data/: 02547405-4cb1-472d-a069-38cf305313e2.lance  12033abe-9078-4253-a10b-f106eee7e96b.lance  49e049e4-2434-4847-b532-9b2f11d3b667.lance  4e504035-5177-4ff6-83ab-24ab3a895e79.lance  4ff99703-4be7-42f5-8865-d0a394eb08c0.lance  5c7a0d81-08b6-47eb-ba6a-cac244e78901.lance
