[tool.poetry]
name = "gateway_service"
version = "0.1.0"
description = "A gateway service with auth, rate limiting, logging, and metrics"
authors = ["Nikita Pavlichenko <nikita.v.pavlichenko@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
fastapi = "^0.112.0"
python-multipart = "^0.0.9"
databases = "^0.9.0"
httpx = "^0.23.3"
redis = "^5.0.8"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.5"
black = "24.8.0"

[tool.poetry.scripts]
middleware-service = "app.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
