[tool.poetry]
name = "inference_service"
version = "0.1.0"
description = "A service to interact with OpenAI's GPT-4 API"
authors = ["Nikita Pavlichenko <nikita.v.pavlichenko@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
httpx = "^0.27.0"
openai = "^1.40.2"
uvicorn = "^0.30.5"
black = "24.8.0"
transformers = "^4.45.2"
torch = "^2.5.0"
accelerate = "^1.0.1"

[tool.poetry.scripts]
chat-service = "src.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
